[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "wordpress-analyser"
version = "0.3.0"
description = "WordPress theme and plugin analyser — hooks, template hierarchy, plugin API signals"
authors = [{name = "Michael Borck", email = "michael.borck@curtin.edu.au"}]
readme = "README.md"
requires-python = ">=3.11"
license = {text = "MIT"}
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]
dependencies = [
    "fastapi>=0.109.0",
    "uvicorn>=0.27.0",
    "python-multipart>=0.0.6",
    "rich>=13.7.0",
    "pydantic>=2.5.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4.0",
    "pytest-cov>=4.1.0",
    "httpx>=0.27.0",
]

[project.scripts]
wordpress-analyser = "wordpress_analyser.cli:main"

[tool.hatch.build.targets.wheel]
packages = ["src/wordpress_analyser"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
addopts = "-m 'not slow'"
markers = [
    "slow: tests that load real models or make network calls — opt-in with `pytest -m slow`",
]
